base/src/test/resources/failure/tyck/literal-ambiguous-2.aya.txt
In file $FILE:6:17 ->

  4 |   
  5 |   def take Empty => Empty
  6 |   def test => take 0
    |                    ^^

Error: Unable to solve the type of this literal:
         0
       I'm confused about the following candidates, please help me!
         `Nat1`, `Nat2`

1 error(s), 0 warning(s).
What are you doing?
